--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,7 @@
         }
     },
     "require-dev": {
+        "phpstan/phpstan-phpunit": "^1.3",
         "phpstan/phpstan-symfony": "^1.3",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.2.*",
