--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,20 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^2.10",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.15",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "6.2.*",
         "symfony/console": "6.2.*",
+        "symfony/doctrine-messenger": "6.2.*",
         "symfony/dotenv": "6.2.*",
         "symfony/flex": "^2",
         "symfony/form": "6.2.*",
         "symfony/framework-bundle": "6.2.*",
+        "symfony/mailer": "6.2.*",
+        "symfony/maker-bundle": "^1.49",
+        "symfony/messenger": "6.2.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/runtime": "6.2.*",
         "symfony/security-csrf": "6.2.*",
